--- a/start.page.html
+++ b/start.page.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style-module.css" />
+        <link rel="stylesheet" type="text/css" href="starts">
 
     </head>
      <body>
