--- a/third.page.html
+++ b/third.page.html
@@ -1,6 +1,6 @@
 html>
     <head>
-        <link rel="stylesheet" href="style-module.css" />
+       <link rel="stylesheet" type="text/css" href="third.page.css">
 
     </head>
      <body>
