--- a/start.page.html
+++ b/start.page.html
@@ -8,7 +8,7 @@
 </header>
 <main>
     <a class="kot" href="">создатель </a>
-     <a class="kot "href="">Главное</a>  
+     <a class="kot "href="second.page.html">Главное</a>  
          <a class="kot"  href="">Игры</a>  
 <h1 id="12"> О STEAM </h1>
 <p>Steam – сервис компании Valve, известного разработчика видеоигр, предоставляющего услуги цифровой дистрибуции, многопользовательских игр и общения игроков.</p>
