--- a/start.page.html
+++ b/start.page.html
@@ -7,7 +7,7 @@
  <header>
 </header>
 <main>
-    <a class="kot" href="">создатель </a>
+    <a class="kot" href="third.page.html">создатель </a>
      <a class="kot "href="second.page.html">Главное</a>  
          <a class="kot"  href="">Игры</a>  
 <h1 id="12"> О STEAM </h1>
