--- a/start.page.html
+++ b/start.page.html
@@ -8,8 +8,8 @@
 </header>
 <main>
     <a class="kot" href="third.page.html">создатель </a>
-     <a class="kot "href="second.page.html">Главное</a>  
-         <a class="kot"  href="">Игры</a>  
+     <a class="kot "href="start.page.html">Главное</a>  
+         <a class="kot"  href="second.page.html">Игры</a>  
 <h1 id="12"> О STEAM </h1>
 <p>Steam – сервис компании Valve, известного разработчика видеоигр, предоставляющего услуги цифровой дистрибуции, многопользовательских игр и общения игроков.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/512px-Steam_icon_logo.svg.png">
