--- a/second.page.html
+++ b/second.page.html
@@ -7,7 +7,7 @@
  <header>
 </header>
 <main>
-    <a class="kot" href="">создатель <a>
+    <a class="kot" href="third.page.html">создатель <a>
      <a class="kot "href="">Главное<a>  
          <a class="kot"  href="">Игры<a>  
 <h1 a id="12"> ИГРЫ </h1>
