--- a/second.page.html
+++ b/second.page.html
@@ -8,7 +8,7 @@
 </header>
 <main>
     <a class="kot" href="third.page.html">создатель <a>
-     <a class="kot "href="">Главное<a>  
+     <a class="kot "href="start.page.html.">Главное<a>  
          <a class="kot"  href="">Игры<a>  
 <h1 a id="12"> ИГРЫ </h1>
 <ul>
