--- a/second.page.html
+++ b/second.page.html
@@ -9,7 +9,7 @@
 <main>
     <a class="kot" href="third.page.html">создатель <a>
      <a class="kot "href="start.page.html.">Главное<a>  
-         <a class="kot"  href="">Игры<a>  
+         <a class="kot"  href="second.page.html">Игры<a>  
 <h1 a id="12"> ИГРЫ </h1>
 <ul>
     <li>Counter-Strike: Global Offensive</li>
