--- a/third.page.html
+++ b/third.page.html
@@ -7,9 +7,9 @@
  <header>
 </header>
 <main>
-    <a class="kot" href="">создатель <a>
-     <a class="kot "href="">Главное<a>  
-         <a class="kot"  href="">Игры<a>  
+    <a class="kot" href="third.page.html">создатель <a>
+     <a class="kot "href="start.page.html">Главное<a>  
+         <a class="kot"  href="second.page.html">Игры<a>  
 <h1 a id="12"> Создатель </h1>
 <p>Гейб Ло́ган Нью́элл - также известный как Gaben; 3 ноября 1962 года, Сиэтл, США) — американский предприниматель и разработчик видеоигр. Один из основателей и генеральный директор компании Valve, занимающейся разработкой компьютерных игр и их цифровой дистрибуцией. В октябре 2017 года был причислен журналом Forbes к списку 100 самых богатых людей США, его состояние оценивалось в 5,5 млрд долларов.</p>
 <a class="bot" href="#12">верх<a>
