--- a/start.page.html
+++ b/start.page.html
@@ -11,7 +11,7 @@
      <a class="kot "href="start.page.html">Главное</a>  
          <a class="kot"  href="second.page.html">Игры</a>  
 <h1 id="12"> О STEAM </h1>
-<p>Steam – сервис компании Valve, известного разработчика видеоигр, предоставляющего услуги цифровой дистрибуции, многопользовательских игр и общения игроков.</p>
+<p>Steam – сервис компании Valve, известного разработчика видеоигр, предоставляющего услуги цифровой дистрибуции, многопользовательских игр и общения игроков.Основная услуга Steam – это продажа видеоигр, загрузка которых требует специального приложения на компьютере, Steam-клиента. Кроме того, сервис распространяет программы для создания видеоигр и связанных работ (обработка фото, видео, звука), оборудования, видео, новости видеоигровой индустрии и самого Steam.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Steam_icon_logo.svg/512px-Steam_icon_logo.svg.png">
     
    <br> <a class="bot" href="#12">верх</a>
